--- a/settings/project.json
+++ b/settings/project.json
@@ -10,6 +10,7 @@
     [
       false,
       true,
+      true,
       true
     ],
     [
@@ -18,6 +19,12 @@
     ],
     [
       true,
+      false,
+      false
+    ],
+    [
+      true,
+      false,
       false,
       false
     ]
@@ -30,7 +37,8 @@
   "group-list": [
     "birdCrash",
     "pipeCrash",
-    "groundCrash"
+    "groundCrash",
+    "screen"
   ],
   "simulator-orientation": false,
   "simulator-resolution": {
@@ -38,6 +46,5 @@
     "width": 960
   },
   "use-customize-simulator": false,
-  "use-project-simulator-setting": false,
-  "start-scene": "current"
+  "use-project-simulator-setting": false
 }
