--- a/settings/project.json
+++ b/settings/project.json
@@ -11,6 +11,7 @@
       false,
       true,
       true,
+      true,
       true
     ],
     [
@@ -27,6 +28,13 @@
       false,
       false,
       false
+    ],
+    [
+      true,
+      false,
+      false,
+      false,
+      false
     ]
   ],
   "design-resolution-height": 640,
@@ -38,7 +46,8 @@
     "birdCrash",
     "pipeCrash",
     "groundCrash",
-    "screen"
+    "screen",
+    "score"
   ],
   "simulator-orientation": false,
   "simulator-resolution": {
